--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="spend_step_3">%1$s บาทขึ้นไป</string>
     <string name="cashback_step_title">รับเครดิตเงินคืน*</string>
     <string name="cashback_step">%1$s เปอร์เซ็นต์</string>
+    <string name="my_expense">%1$s บาท</string>
 </resources>
