--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,7 @@
     <string name="cashback_earned_category">ได้รับเครดิตเงินคืนในหมวดหมู่: %1$s</string>
     <string name="calculate_cashback_earned">%1$s เปอร์เซ็นต์ คิดเป็นจำนวนเงิน: %2$s บาท</string>
     <string name="estimate_spending">ของจำนวนเงินที่คาดว่าจะใช้จ่าย %1$s บาท</string>
+    <string name="promotion_distance">ระยะทาง %1$s เมตร</string>
+    <string name="cashback_earned_percent">จะได้รับเครดิตเงินคืน: %1$s เปอร์เซ็นต์</string>
+    <string name="cashback_earned_to_bath">คิดเป็นจำนวนเงิน %1$s บาท</string>
 </resources>
