--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,10 +19,12 @@
         <item>Shopping</item>
         <item>Dining</item>
     </string-array>
-    <string name="more_accumulate_spending">จำนวนเงินที่ต้องสะสมเพิ่ม: %1$s บาท</string>
-    <string name="cashback_earned">จะได้รับเครดิตเงินคืน: %1$s บาท</string>
+    <string name="accumulate_spending">ค่าใช้จ่ายสะสม: %1$s บาท</string>
+    <string name="accumulate_cashback">เครดิตเงินคืนสะสม: %1$s บาท</string>
+    <string name="more_accumulate_spending">ถ้าใช้จ่ายสะสมเพิ่มอีก: %1$s บาท</string>
+    <string name="more_cashback_earned">จะได้รับเครดิตเงินคืนเพิ่มเป็น: %1$s เปอร์เซ็นต์</string>
     <string name="promotion_expired_date">โปรโมชั่นจะหมดอายุภายใน: %1$s วัน</string>
-    <string name="saved_promotion_date">ลงทะเบียนไว้เมื่อ: %1$s</string>
+    <string name="saved_promotion_date">บันทึกไว้เมื่อ: %1$s จากบัตรเครดิต %2$s</string>
     <string name="cashback_earned_category">ได้รับเครดิตเงินคืนในหมวดหมู่: %1$s</string>
     <string name="calculate_cashback_earned">%1$s เปอร์เซ็นต์ คิดเป็นจำนวนเงิน: %2$s บาท</string>
     <string name="estimate_spending">ของจำนวนเงินที่คาดว่าจะใช้จ่าย %1$s บาท</string>
@@ -30,7 +32,7 @@
     <string name="cashback_earned_percent">จะได้รับเครดิตเงินคืน: %1$s เปอร์เซ็นต์</string>
     <string name="cashback_earned_to_bath">คิดเป็นจำนวนเงิน %1$s บาท</string>
     <string name="confirm_save_promotion_title">บันทึกการใช้โปรโมชั่น</string>
-    <string name="confirm_save_promotion_desc">คุณต้องการบันทึกการใช้จ่ายสำหรับโปรโมชั่นนี้ ?</string>
+    <string name="confirm_save_promotion_desc">โปรดเลือกบัตรเครดิตท่ืต้องการบันทึกสำหรับโปรโมชั่นนี้</string>
     <string name="common_accept">ตกลง</string>
     <string name="common_decline">ยกเลิก</string>
 </resources>
