--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,6 @@
     <string name="full_bill_balance_spend">เงินคงเหลือที่คาดว่าจะใช้จ่ายได้: %1$s บาท\nจากค่าใช้จ่ายย้อนหลังเดือนที่แล้ว</string>
     <string name="full_bill_balance_credit_card_spend">บัตร %1$s: แนะนำใช้จ่าย %2$s บาท เพื่อรับเครดิตเงินคืน %3$s บาท</string>
     <string name="total_cashback_earned">ผลรวมเครดิตเงินคืนที่คาดว่าจะได้รับทั้งหมด: %1$s บาท</string>
+    <string name="split_bill_must_spend">ถ้าต้องใช้จ่าย %1$s บาท โดยแบ่งจ่าย</string>
+    <string name="split_bill_credit_card_cashback">บัตร %1$s\nแบ่งจ่ายยอดที่ 1: %2$s บาท ได้รับเครดิตเงินคืนเต็ม %3$s บาท</string>
 </resources>
