--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,6 @@
     <string name="total_cashback_earned">ผลรวมเครดิตเงินคืนที่คาดว่าจะได้รับทั้งหมด: %1$s บาท</string>
     <string name="split_bill_must_spend">ถ้าต้องใช้จ่าย %1$s บาท โดยแบ่งจ่าย</string>
     <string name="split_bill_credit_card_cashback">บัตร %1$s\nแบ่งจ่ายยอดที่ %2$s: %3$s บาท เพื่อรับเครดิตเงินคืน %4$s บาท</string>
+    <string name="confirm_save_card_benefit_title">บันทึกการใช้จ่ายและเครดิตเงินคืน</string>
+    <string name="confirm_save_card_benefit_desc">คุณต้องการบันทึกเพื่อใช้ในการแนะนำบัตรเครดิตที่ดีที่สุดในครั้งถัดไป ?</string>
 </resources>
